# slappt

./: .gitignore  CHANGELOG.md  DEVELOPER.md  HISTORY.md  LICENSE.txt  README.md  cliff.toml  conftest.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/md/: commands.md  install.md  quickstart.md  spec.md  sshlurm.md  usage.md
examples/: hello.yaml
scripts/: lint.py  update_version.py
slappt/: __init__.py  docker.py  models.py  scripts.py  slappt.py  slurm.py  ssh.py  sshlurm.py  utils.py
slappt/tests/: test_cli.py  test_docker.py  test_scripts.py  test_slappt.py  test_ssh.py  test_sshlurm.py
slappt/tests/scripts/: test_slappt.py
