[metadata]
name = slappt
version = file: version.txt
description = generate slurm scripts for apptainer jobs
long_description = file: README.md
long_description_content_type = text/markdown
author = Computational Plant Science Lab
author_email = wbonelli@uga.edu
maintainer = Wes Bonelli
maintainer_email = wbonelli@uga.edu
license = BSD-3-Clause
license_files = LICENSE.md
keywords = hpc, containers, slurm, apptainer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Distributed Computing
    Topic :: Scientific/Engineering :: Bio-Informatics
url = https://github.com/Computational-Plant-Science/slappt
download_url = https://pypi.org/project/slappt
project_urls =
    Documentation = https://slappt.readthedocs.io
    Bug Tracker = https://github.com/Computational-Plant-Science/slappt/issues
    Source Code = https://github.com/Computational-Plant-Science/slappt

[options]
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    click
    httpx
    filelock
    paramiko
    pyaml
    requests
    tenacity
    tqdm
setup_requires =
    setuptools
    wheel

[options.extras_require]
lint =
    black
    flake8
    isort
    pylint
test =
    %(lint)s
    coverage
    coveralls
    jupyter
    jupytext
    pytest
    pytest-asyncio
    pytest-dotenv
    pytest-xdist
irods =
    python-irodsclient
s3 =
    boto3
    s3fs
gcs =
    google-cloud-storage
azure =
    azure-identity
    azure-storage-blob
docs =
    sphinx
    furo
    myst-parser

[options.entry_points]
console_scripts =
    slappt = slappt.slappt:cli
    sshlurm = slappt.sshlurm:cli
